[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ocp-cad-wrapper"
version = "0.0.1"
description = "ocp cad viewer wrapper"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE.txt" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "build123d",
    "importlib",
    "ocp_vscode",
    "watchdog"
]

[project.scripts]
wrapper = "ocp_cad_wrapper.wrapper:run"
